<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ChildLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_annualIncome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_heading" />

            <EditText
                android:id="@+id/et_AnnualIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:text="0.00"
                android:hint="Annual Income"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_income" />

            <TextView
                android:id="@+id/tv_MaxLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_max_rrsp_limit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_AnnualIncome" />

            <EditText
                android:id="@+id/et_MaxRRSPLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:hint="Max RRSP Limit"
                android:text="0.00"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_MaxLimit" />

            <TextView
                android:id="@+id/tv_RRSP_Percenatge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_RRSP_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_MaxRRSPLimit" />

           <com.google.android.material.slider.Slider
                android:id="@+id/slider_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                android:value="60.0"
                android:stepSize="10.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_RRSP_Percenatge" />

            <TextView
                android:id="@+id/tv_RRSP_Contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_RRSp_Contribution"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_percentage" />

            <EditText
                android:id="@+id/et_RRSP_Contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="none"
                android:textSize="24sp"
                android:editable="false"
                android:text="0.00"
                android:background="@color/lightgrey"
                android:textColor="@color/black"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_RRSP_Contribution" />

            <TextView
                android:id="@+id/tv_RRSP_NextYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_RRSp_NextYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_RRSP_Contribution" />

            <EditText
                android:id="@+id/et_RRSP_NextYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:inputType="none"
                android:text="0.00"
                android:editable="false"
                android:background="@color/lightgrey"
                android:textColor="@color/black"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_RRSP_NextYear" />

            <TextView
                android:id="@+id/tv_TaxableIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_taxableIncome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_RRSP_NextYear" />

            <EditText
                android:id="@+id/et_TaxableIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:inputType="none"
                android:text="0.00"
                android:editable="false"
                android:background="@color/lightgrey"
                android:textColor="@color/black"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_TaxableIncome" />

            <TextView
                android:id="@+id/tv_Tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/tv_TotalTaxCalculated"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_TaxableIncome" />

            <EditText
                android:id="@+id/et_CalculatedTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:inputType="none"
                android:text="0.00"
                android:editable="false"
                android:background="@color/lightgrey"
                android:textColor="@color/black"
                android:focusable="false"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_Tax" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>